[tool.poetry]
name = "ghp"
version = "0.1.0"
description = ""
authors = ["rodr15 <anthony.rodriguezf11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.0"}
gitpython = "^3.1.43"

[tool.poetry.scripts]
ghp = "ghp.main:app"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
